# VersaLog.rs

./: Cargo.toml  README.md
.github/workflows/: publish.yml
examples/: api_req.rs  progress_logging.rs
sample/: detailed_test.rs  file_test.rs  simple2_test.rs  simple_test.rs
src/: lib.rs
tests/: detailed_test.rs  file_test.rs  log_save_test.rs  simple2_test.rs  simple_test.rs
