[package]
name = "VersaLogrs"
version = "1.5.5"
edition = "2024"
authors = ["kaedeek"]
description = "Versatile logging library."
license = "MIT"
repository = "https://github.com/kaedeek/VersaLog.rs"

[lib]
name = "versalogrs"
path = "src/lib.rs"

[dependencies]
notify-rust = "4.11.7"
chrono = "0.4.41"
backtrace = "0.3.75"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"